--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 
             <a href="#" class="item-menu"> CONTATO</a>
         </nav>
+        <div class="banner">
+            <img src="imagens/banner.png" alt="bolo de chocolate"
+            class="imagem-banner">
+
+        </div>
+
 
 
         
