--- a/index.html
+++ b/index.html
@@ -88,9 +88,15 @@
                 <img src="imagens/bolo01.png" alt="Bolo de chocolate" class="foto-bolo">
                 <img src="imagens/bolo02.png" alt="Bolo de baunilha" class="foto-bolo">
                 <img src="imagens/bolo 03.png" alt="Bolo de cereja" class="foto-bolo">
-                
-
                
+            </div>
+        </div>
+
+        <div class="contato">
+            <h2 class="titulo-contato">Contato</h2>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.328528678125!2d-47.33128268503708!3d-22.753186085090153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8998174c896b9%3A0x739b7f99b3323574!2sSenac%20Americana!5e0!3m2!1spt-BR!2sbr!4v1666917599950!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <!--Aqui vai o mapinha do maroto-->
             </div>
         </div>
 
