--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         </header>
 
         <nav class="menu-principal">
-            <a href="#" class="item-menu"> CARDAPIO</a> -
+            <a href="#cardapio" class="item-menu"> CARDAPIO</a> -
 
-            <a href="#" class="item-menu"> FOTOS</a> -
+            <a href="#fotos" class="item-menu"> FOTOS</a> -
 
-            <a href="#" class="item-menu"> CONTATO</a>
+            <a href="#contato" class="item-menu"> CONTATO</a>
         </nav>
         <div class="banner">
             <img src="imagens/banner.png" alt="bolo de chocolate" class="imagem-banner">
 
         </div>
 
-        <div class="cardapio">
+        <div class="cardapio" id="cardapio">
 
             <h2 class="titulo-cardapio">Cardápio</h2>
 
@@ -79,7 +79,7 @@
             </ul>
         </div>
 
-        <div class="galeria-fotos">
+        <div class="galeria-fotos" id="fotos">
 
             <h2 class="titulo-galeria">Fotos</h2>
 
@@ -92,13 +92,30 @@
             </div>
         </div>
 
-        <div class="contato">
+        <div class="contato" id="contato"> 
             <h2 class="titulo-contato">Contato</h2>
             <div class="mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.328528678125!2d-47.33128268503708!3d-22.753186085090153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8998174c896b9%3A0x739b7f99b3323574!2sSenac%20Americana!5e0!3m2!1spt-BR!2sbr!4v1666917599950!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <!--Aqui vai o mapinha do maroto-->
             </div>
         </div>
+<footer class="rodape">
+    <h2 class="titulo-rodape">
+    <span class="titulo-pequeno">bolos do</span><br>
+    Gabriel
+    </h2>
+    <p class="redes-sociais">
+
+        <a href="https://pt-br.facebook.com/login/device-based/regular/login/" target="blank">
+
+            <img src="facebook.png" alt="logo face"> 
+
+            <a href="https://www.instagram.com/" target="blank">
+
+                <img src="insta.png" alt="logo insta" >
+        </a>
+    </p>
+</footer>
 
         
 
